--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ django-debug-toolbar==1.9.1
 django-environ==0.4.4
 django-extensions==2.0.0
 django-suit==0.2.26
+psycopg2==2.7.1
 python-memcached==1.59
