--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.0.3
 coverage==4.5.1
 dj-database-url==0.5.0
+django-cookie-law==2.0.1
 django-debug-toolbar==1.9.1
 django-environ==0.4.4
 django-extensions==2.0.0
