--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Django==2.0.3
-coverage==4.5.1
+Django==2.2.6
+coverage==4.5.4
 dj-database-url==0.5.0
-django-cookie-law==2.0.1
-django-debug-toolbar==1.9.1
-django-environ==0.4.4
-django-extensions==2.0.0
+django-cookie-law==2.0.2
+django-debug-toolbar==2.0
+django-environ==0.4.5
+django-extensions==2.2.3
 django-suit==0.2.26
-psycopg2==2.7.1
+psycopg2==2.8.4
 python-memcached==1.59
+gunicorn==19.7.1
